log
Fri 22 Mar 2024 08:17:09 PM UTC: 
 tests:  0|5
total_score: 0/70
594c42d
Fri 22 Mar 2024 08:18:52 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|5
total_score: 0/70
f4da40c
Fri 22 Mar 2024 08:19:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:19: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   48 |       pushBack(L, i);
      |                   ^
      |                   |
      |                   int
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:30: note: expected ‘void *’ but argument is of type ‘int’
   20 | void pushBack(List *L, void *dato);
      |                        ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
fed5e16
Fri 22 Mar 2024 08:20:33 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5cd8cb8
Fri 22 Mar 2024 08:21:41 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
0aea254
Fri 22 Mar 2024 08:22:21 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
e6761c4
Fri 22 Mar 2024 08:22:47 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:13: error: invalid type argument of unary ‘*’ (have ‘int’)
   49 |     push(L, *i);
      |             ^~
Compilation failed
4c581ea
Fri 22 Mar 2024 08:23:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:13: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
   49 |     push(L, i);
      |             ^
      |             |
      |             int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
94be07b
Fri 22 Mar 2024 08:24:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:17: error: invalid type argument of unary ‘*’ (have ‘int’)
   49 |     pushBack(L, *i);
      |                 ^~
Compilation failed
7b25a0c
Fri 22 Mar 2024 08:24:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
50ec9bc
Fri 22 Mar 2024 08:24:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:17: error: invalid type argument of unary ‘*’ (have ‘int’)
   49 |     pushBack(L, *i);
      |                 ^~
Compilation failed
cb16dfc
Fri 22 Mar 2024 08:24:26 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:17: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   49 |     pushBack(L, i);
      |                 ^
      |                 |
      |                 int
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:30: note: expected ‘void *’ but argument is of type ‘int’
   20 | void pushBack(List *L, void *dato);
      |                        ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
45f12ad
Fri 22 Mar 2024 08:24:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:17: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   49 |     pushBack(L, 1);
      |                 ^
      |                 |
      |                 int
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:30: note: expected ‘void *’ but argument is of type ‘int’
   20 | void pushBack(List *L, void *dato);
      |                        ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
e5bca25
Fri 22 Mar 2024 08:25:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:20: error: array subscript -10 is outside array bounds of ‘int[1]’ [-Werror=array-bounds]
   49 |     pushBack(L, &i - 10);
      |                 ~~~^~~~
exercises.c:47:11: note: while referencing ‘i’
   47 |   for(int i = 1; i <= 10; i++)
      |           ^
cc1: all warnings being treated as errors
Compilation failed
2057b84
Fri 22 Mar 2024 08:27:20 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
844f0bb
Fri 22 Mar 2024 08:28:47 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:17: error: invalid type argument of unary ‘*’ (have ‘int’)
   49 |     pushBack(L, *i);
      |                 ^~
Compilation failed
de03602
